test/MC/SVE/regression-tests/negative_tests/sve-ld4b-001.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecU8E4Load1LSSZ
// Offset register Rm cannot be xzr
ld4b {z9.b, z10.b, z11.b, z12.b}, p2/z, [x14, xzr]
// CHECK: {{(error\:\ index\ must\ be\ an\ integer\ in\ range)|(error\:\ index\ must\ be\ a\ multiple\ of)}}
